Fixed about section spacing

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -132,6 +132,7 @@ p {
 
 .about h2 {
   text-align:left;
+  margin: 25px 0 20px
 }
 
 .about a {
@@ -154,6 +155,9 @@ p {
 
 @media (max-width: 992px) {
   
+  .about {
+    margin-top: -20px;
+  }
   .top-margin {
     margin-top: 40px;
   }
@@ -181,7 +185,4 @@ p {
     font-size: 24px;
   }
 
-  h2 {
-    font-size: 24px;
-  }
 }
